--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -79,6 +79,11 @@ input[type="text"]{
 	max-height: 120px;
 }
 
+.pic{
+	border: 3px solid white; 
+	box-shadow: 0 10px 10px rgba(0,0,0,0.3);
+}
+
 .claim{
 	font-size: 100%;
 	color: purple;
@@ -101,19 +106,9 @@ input[type="text"]{
 	text-decoration: none;
 }
 
-#home-container {
+.page-container {
 	width: 70%;
 	min-width: 700px;
 	margin: auto;
 }
 
-.congrats{
-	font-size: 50px;
-	animation-name: example;
-    animation-duration: 6s;
-}
-
-@keyframes example {
-    from {background-color: 800080;}
-    to {background-color: yellow;}
-}
