--- a/templates/about.html
+++ b/templates/about.html
@@ -7,11 +7,13 @@
   </head>
   <body class="about">
     <div class="page-container">
-    	<h1>Lost and Found, Reimagined!</h1>
+    	<h1>LASA 'n Found</h1>
       <div class="toolbar">
   	   <a class="tool-link" href="/">Home</a> |
+       <a class="tool-link" href="/about"><b>About</b></a> |
   	   <a class="tool-link" href="/new">New Item</a>
   	  </div>
+      <h2>Lost and Found, Reimagined!</h2>
       <h3>What is LASA 'n Found?</h3>
       <p>LASA 'n Found is a crowdsourced solution to LASA's lost and found problem. You can either browse for a lost item, or submit a new one to our database.</p>
       <h3>How it Works</h3>
