--- a/templates/newitem.html
+++ b/templates/newitem.html
@@ -7,12 +7,13 @@
   </head>
   <body>
     <div class="page-container">
-      <h1>Report a New Lost Item</h1>
+      <h1>LASA 'n Found</h1>
       <div class="toolbar">
-       <a class="tool-link" href="/">Home</a> |
-       <a class="tool-link" href="/about">About</a>
+        <a class="tool-link" href="/">Home</a> |
+        <a class="tool-link" href="/about">About</a> |
+        <a class="tool-link" href="/new"><b>New Item</b></a>
       </div>
-      <!--action needs to update-->
+      <h3>Report a New Lost Item</h3>
       <form enctype="multipart/form-data" method="post">
         <div class="top">
           <span class="bot">Title</span><span class="error">{{titleError}}</span><br><br>
