adding captchas to the new item page

--- a/templates/newitem.html
+++ b/templates/newitem.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>LASA 'n Found - New Item</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+    <script src='https://www.google.com/recaptcha/api.js'></script>
   </head>
   <body>
     <div class="page-container">
@@ -13,8 +14,9 @@
         <a class="tool-link" href="/about">About</a> |
         <a class="tool-link" href="/new"><b>New Item</b></a>
       </div>
+      <div class="error">{{error}}</div>
       <h3>Report a New Lost Item</h3>
-      <form enctype="multipart/form-data" method="post">
+      <form class="claim-form" enctype="multipart/form-data" method="post">
         <div class="top">
           <span class="bot">Title</span><span class="error">{{titleError}}</span><br><br>
           <input type="text" name="title" value="{{titleData}}">
@@ -34,7 +36,7 @@
           <p>Add relevent picture of the item <span class="error">{{fileError}}</span></p>
           <input name="file" type="file"/>
         </div><br>
-        <div class="g-recaptcha" data-sitekey="6LdVQTQUAAAAALtj9Jq1fTVLxU-SK3Ib1L_1Sm0H"></div>
+        <div class="g-recaptcha" data-sitekey="6LdVQTQUAAAAALtj9Jq1fTVLxU-SK3Ib1L_1Sm0H"></div><br>
         <input class="submit" type="submit" value="Submit">
       </form>
     </div>
